turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:14: error: ')' expected but ';' found.
		setCouleurBrosse(colors(place(x)); baisseBrosse(); leveBrosse(); droite();avance()
                                                 ^LangtonsAnt:16: error: ')' expected but ';' found.
		setCouleurBrosse(colors(place(x)); baisseBrosse(); leveBrosse(); gauche();avance()
                                                 ^LangtonsAnt:19: error: ')' expected but '}' found.
}
^